// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatting elodin syntax should return beautiful syntax 1`] = `
"# foo
variant Type {
  Primary
}

variant Mode {
  Dark
  Light
}

style Flex {
  flexGrow: 1
  # foobar
  # baz
  flexDirection: row
}

style Button {
  # baz
  __borderWidth: .3
  justifyContent: flexStart
  backgroundColor: rgb(255 200 155)
  # bam
  [Type=Primary] {
    # bazbar
    paddingLeft: 20
    [Mode=Dark] {
      # bam
      __paddingLeft: 10
      backgroundColor: green
    }
  }
}

style Label {
  lineHeight: $lineHeight
  fontSize: 20
  color: rgb(200 120 0)
  [@hover] {
    color: rgba(255 0 120 percentage(50))
  }
  [@minWidth=320] {
    color: rgba(add(10 20) 0 20 percentage($percent))
    [@hover] {
      color: green
    }
  }
}"
`;

exports[`Formatting elodin syntax should return beautiful syntax with custom syntax 1`] = `
Object {
  "code": "# foo
variant Type {
  Primary
}

variant Mode {
  Dark
  Light
}

style Flex {
  flexGrow: 1
  # foobar
  # baz
  flexDirection: row
}

style Button {
  # baz
  __borderWidth: .3
  justifyContent: flexStart
  backgroundColor: rgb(255 200 155)
  # bam
  [Type=Primary] {
    # bazbar
    paddingLeft: 20
    [Mode=Dark] {
      # bam
      __paddingLeft: 10
      backgroundColor: green
    }
  }
}

style Label {
  lineHeight: $lineHeight
  fontSize: 20
  color: rgb(200 120 0)
  [@hover] {
    color: rgba(255 0 120 percentage(50))
  }
  [@minWidth=320] {
    color: rgba(add(10 20) 0 20 percentage($percent))
    [@hover] {
      color: green
    }
  }
}",
  "errors": Array [],
}
`;
